Adding task list

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.js"></script>
 	<script type="text/javascript" src="//maps.googleapis.com/maps/api/js"></script>
+	<script type="text/javascript" src="//apis.google.com/js/client.js"></script>
 
 	<!-- JS LIBRARIES -->
 	<script type="text/javascript" src="/assets/js/translate.js"></script>
