--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	<link href="assets/css/main.css" 		rel="stylesheet" media="screen">
 	<link href="assets/css/animate.css" 	rel="stylesheet" media="screen">
 	<link href="assets/css/print.css" 		rel="stylesheet" media="print">
+	
+	<link href="assets/css/timeline.css" 		rel="stylesheet" media="screen">
 </head>
 <body ng-controller="MainCtrl" ng-swipe-left="tools.side.swipe('left')"  ng-swipe-right="tools.side.swipe('right')">
 
@@ -34,13 +36,16 @@
 	<script></script>
 
 	<!-- EXTERNAL JAVASCRIPT -->
-	<script type='text/javascript' src="https://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-animate.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-touch.min.js"></script>
+	
+	<script type="text/javascript" src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
+	<script type="text/javascript" src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
+	<script type='text/javascript' src="https://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
 	<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.js"></script>
@@ -48,6 +53,7 @@
 	<script type="text/javascript" src="//apis.google.com/js/client.js"></script>
 
 	<!-- JS LIBRARIES -->
+	<script type="text/javascript" src="/assets/js/chance.js"></script>
 	<script type="text/javascript" src="/assets/js/translate.js"></script>
 	<script type="text/javascript" src="/assets/js/translationLoader.js"></script>
 	
