--- a/modules/dashboard/tasks/main.html
+++ b/modules/dashboard/tasks/main.html
@@ -12,11 +12,12 @@
 				</li>
 				<li class="list-group-item" ng-repeat="task in tasks">
 					<span>{{task.title}}</span>
+					<i class="fa fa-trash pull-right" ng-click="tools.task.item.remove(task)"></i>
 					<span class="badge pull-right">{{task.urgency}}</span>
 				</li>
-				<li class="list-group-item">
-					<button type="button" class="btn btn-success btn-block" ng-click="tools.task.reload()">Reload</button>
-				</li>
+				<!--<li class="list-group-item">-->
+				<!--	<button type="button" class="btn btn-success btn-block" ng-click="tools.task.reload()">Reload</button>-->
+				<!--</li>-->
 			</ul>
 		</div>
 		<div class="col-md-8">
