--- a/modules/dashboard/contacts/main.html
+++ b/modules/dashboard/contacts/main.html
@@ -10,14 +10,16 @@
 				<li class="list-group-item">
 					<input type="text" class="form-control" ng-model="temp.contactSearch">
 				</li>
-				<li class="list-group-item" ng-repeat="contact in contacts">
+				<li class="list-group-item" ng-repeat="contact in contacts" ng-click="tools.contact.focus(contact)">
 					<span>{{contact.fullName}}</span>
-					<i class="fa fa-trash pull-right" ng-click="tools.contact.item.remove(contact)"></i>
+					<i class="fa fa-trash pull-right" ng-click="tools.contact.remove(contact)"></i>
 					<i class="fa fa-phone pull-right" ng-click="tools.contact.call(contact)"></i>
 				</li>
 			</ul>
 		</div>
-		<div class="col-md-8">
+		
+		<!--EDIT CONTACT INFO-->
+		<div class="col-md-8" ng-hide="temp.viewContact">
 			<div class="well clearfix">
 				<h1>Add A contact</h1>
 				<form class="form-horizontal" role="form" ng-submit="tools.contact.add(temp.contact)">
@@ -46,13 +48,63 @@
 						</div>
 					</div>
 					<div class="form-group">
+						<label for="contactProfile" class="col-sm-2 control-label">Profile Link</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" id="contactProfile" placeholder="Profile Link" ng-model="temp.contact.profile">
+						</div>
+					</div>
+					<div class="form-group">
 						<label for="contactAddress" class="col-sm-2 control-label">Address</label>
 						<div class="col-sm-10">
 							<textarea class="form-control" id="contactAddress" placeholder="Address" ng-model="temp.contact.address"></textarea>
 						</div>
 					</div>
-					<button type="submit" class="btn btn-info pull-right">Create contact</button>
+					<button type="submit" class="btn btn-info pull-right">Save contact</button>
 				</form>
+			</div>
+		</div>
+		
+		
+		<!--CONTACT INFO AND CONVERSATION-->
+		<div class="col-md-8" ng-show="temp.viewContact">
+			<div class="well clearfix">
+				<button type="button" class="close" data-dismiss="modal" ng-click="tools.contact.close()"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+				<h1>{{temp.viewContact.fullName}}</h1>
+				<div class="list-group">
+					<a href="tel:{{temp.viewContact.phone}}" class="list-group-item">
+						<span class="badge"><i class="fa fa-phone"></i></span> {{temp.viewContact.phone}}
+					</a>
+					<a href="mailto:{{temp.viewContact.email}}" class="list-group-item">
+						<span class="badge"><i class="fa fa-envelope"></i></span> {{temp.viewContact.email}}
+					</a>
+					<a target="_new" href="{{tools.contact.mapLink(contact)}}" class="list-group-item">
+						<span class="badge"><i class="fa fa-globe"></i></span> 
+						<p class="list-group-item-text">{{temp.viewContact.address}}</p>
+					</a>
+				</div>
+				
+				<a class="btn btn-warning pull-right" ng-click="tools.contact.edit(temp.viewContact)">Edit Contact</a>
+				
+				<div class="media">
+					<a class="media-left" href="#">
+						<img ng-src="{{user.pic.src}}">
+					</a>
+					<div class="media-body">
+						<h4 class="media-heading">{{user.fullName}}</h4>
+						<p>Cras sit amet nibh spanbero, in gravida nulla. Nulla vel metus scelerisque ante solspancitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+						<!-- Nested media object -->
+						<div class="media">
+							<a class="media-left" href="#">
+								<img ng-src="{{user.pic.src}}">
+							</a>
+							<div class="media-body">
+								<h4 class="media-heading">{{user.fullName}}</h4>
+								<p>Cras sit amet nibh spanbero, in gravida nulla. Nulla vel metus scelerisque ante solspancitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+								<!-- Nested media object -->
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
