Ability to see incoming calls and organize contacts into groups.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link href="assets/css/animate.css" 	rel="stylesheet" media="screen">
 	<link href="assets/css/print.css" 		rel="stylesheet" media="print">
 	
-	<link href="assets/css/timeline.css" 		rel="stylesheet" media="screen">
+	<link href="assets/css/timeline.css" 	rel="stylesheet" media="screen">
 </head>
 <body ng-swipe-left="tools.side.swipe('left')"  ng-swipe-right="tools.side.swipe('right')">
 
@@ -54,6 +54,7 @@
 
 	<!-- JS LIBRARIES -->
 	<script type="text/javascript" src="/assets/js/chance.js"></script>
+	<script type="text/javascript" src="/assets/js/dragable.js"></script>
 	<script type="text/javascript" src="/assets/js/translate.js"></script>
 	<script type="text/javascript" src="/assets/js/translationLoader.js"></script>
 	
