--- a/modules/user/account.html
+++ b/modules/user/account.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="UserCtrl">
+<div class="container" ng-controller="UserCtrl" ng-init="tools.user.init()">
 	<div class="well clearfix">
 		<h1>User Account</h1>
 		<form class="form-horizontal" role="form" ng-submit="tools.user.update(temp.user)">
