--- a/modules/dashboard/timeline/main.html
+++ b/modules/dashboard/timeline/main.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="DashboardCtrl">
+<div class="container-fluid" ng-controller="TimelineCtrl">
 	<div class="row">
 		<div class="col-md-9">
 			<div class="well">
@@ -7,7 +7,23 @@
 			</div>
 		</div>
 		<div class="col-md-3">
-			<div class="">
+			<div class="well">
+				<h1>Message</h1>
+				<form class="form-horizontal" role="form" ng-submit="tools.sms(message)">
+				<div class="form-group">
+					<label for="smsMessage" class="col-sm-2 control-label">SMS</label>
+					<div class="col-sm-10">
+						<textarea class="form-control" id="smsMessage" placeholder="SMS" ng-model="message"></textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-10">
+						<button type="submit" class="btn btn-default btn-block">Send</button>
+					</div>
+				</div>
+				</form>
+			</div>
+			<div class="well">
 				<h1>Summary</h1>
 				<p>This feed has an organized list of everything that is happening.  You can interact with each event in a way unique to the event category.  If the event was a missed call you will interact through a communication dialog.  If the event was a post to the internal board, you can open it to see comments and make comments yourself.  If the event was a phonecall you made you can open the communication dialog and followup on the communication.</p>
 			</div>
